k8s/app/base/service-ssh.yaml
apiVersion: v1
kind: Service
metadata:
  name: memory-ssh
  labels:
    app: memory
    component: ssh
  annotations:
    cloudprovider.harvesterhci.io/ipam: pool
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
    - name: ssh
      port: 22
      targetPort: 2222
      protocol: TCP
  selector:
    app: memory
