k8s/app/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: memory
  labels:
    app: memory
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
    - name: ssh
      port: 2222
      targetPort: 2222
      protocol: TCP
  selector:
    app: memory
